# xelis-ledger-dataflow

arch/: Cargo.toml  wallet_tx.json
arch/src/: binary.rs  canonical.rs  field_element.rs  host_builder.rs  ledger_checks.rs  lib.rs  proofs_host.rs  types.rs  wallet_compare.rs
model_a/: .gitignore  Cargo.toml
model_a/src/: main.rs
