[package]
name = "debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
# === Xelis forks (keep these exact) ===
bulletproofs = { git = "https://github.com/xelis-project/bulletproofs", tag = "v5.0.0" }
curve25519-dalek = { git = "https://github.com/xelis-project/curve25519-dalek", tag = "v4.2.0", features = ["digest", "group", "rand_core", "serde", "ecdlp"] }
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_common" }

# === Small utilities used in the POC (versions OK) ===
merlin = "3"
rand_core = "0.6"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
sha3 = "0.10"
sha2 = "0.10"
rand = "0.8"